--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
   "homepage": "https://github.com/Danomanic/ethels#readme",
   "dependencies": {
     "autoprefixer": "^10.4.7",
+    "compression": "^1.7.4",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "postcss": "^8.4.14",
     "postcss-cli": "^9.1.0",
     "tailwindcss": "^3.1.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
