--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^6.0.6",
     "postcss": "^8.4.14",
     "postcss-cli": "^9.1.0",
+    "sharp": "^0.30.7",
     "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
