--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "build":"node src/tools/data.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tailwind:css": "postcss src/public/styles/tailwind.css -o src/public/styles/style.css"
   },
@@ -20,7 +21,9 @@
   "homepage": "https://github.com/Danomanic/ethels#readme",
   "dependencies": {
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "compression": "^1.7.4",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "postcss": "^8.4.14",
